<resources>
    <string name="app_name">Property Bazaar</string>
    <string name="action_browse">Browse</string>
    <string name="action_new">New</string>
    <string name="action_compare">Compare</string>
    <string name="action_profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="filter_property">Filter Properties</string>
    <string name="input_price">Enter Price</string>
    <string name="input_bedrooms">Enter Number of Bedrooms</string>
    <string name="input_bathrooms">Enter Number of Bathrooms</string>
    <string name="input_garages">Enter Number of Garages</string>
    <string name="input_area">Enter Area in sq feet</string>
    <string name="input_city">Enter City</string>
    <string name="input_rooms">Enter Number of Rooms</string>
    <string name="input_username">Enter Username</string>
    <string name="input_password">Enter Password</string>
    <string name="submit">SUBMIT</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string-array name="filterable_city_array">
        <item>All</item>
        <item>Pune</item>
        <item>Bangalore</item>
        <item>Delhi</item>
        <item>Chennai</item>
        <item>Mumbai</item>
    </string-array>
    <string-array name="city_array">
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Bangalore</item>
        <item>Delhi</item>
        <item>Chennai</item>
    </string-array>
    <string-array name="filterable_property_type_array">
        <item>All</item>
        <item>Bungalow</item>
        <item>Apartment</item>
        <item>Villa</item>
    </string-array>
    <string-array name="property_type_array">
        <item>Bungalow</item>
        <item>Apartment</item>
        <item>Villa</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose">CHOOSE</string>
    <string name="input_title">Enter Title</string>
    <string name="input_description">Enter Description</string>
    <string name="input_address">Enter Address</string>
    <string name="Email">EMAIL</string>
    <string name="Locate">LOCATE</string>
</resources>
