<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_browse"
        android:enabled="true"
        android:title="@string/action_browse"
        android:icon="@mipmap/ic_cart_outline_black_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_new"
        android:enabled="true"
        android:title="@string/action_new"
        android:icon="@mipmap/ic_library_plus_black_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:title="@string/action_profile"
        android:icon="@mipmap/ic_account_black_36dp"
        app:showAsAction="ifRoom" />
</menu>