<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.LoginUser"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/banner"
        android:layout_marginTop="-50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/et_username_login"
        android:hint="@string/input_username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/et_password_login"
        android:inputType="textPassword"
        android:hint="@string/input_password"/>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dip"
        android:minWidth="88dip"
        android:clickable="true"
        android:id="@+id/b_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/login"/>

    </android.support.v7.widget.CardView>

</LinearLayout>
